# command_center

./: .gitignore  Cargo.toml  GROQ_API_KEY  TG_TOKEN  metadata.json
api/: command_center:appattacc.os.wit  command_center:uncentered.os.wit  embedding:uncentered.os.wit  llm:uncentered.os.wit  stt:uncentered.os.wit  tg:uncentered.os.wit
command_center/: Cargo.toml
command_center/src/: embedding.rs  helpers.rs  lib.rs  llm_filter.rs  media_description.rs  structs.rs  subtext.rs  temp.rs
llm/: Cargo.toml
llm/src/: helpers.rs  lib.rs  structs.rs
llm_api/: Cargo.toml
llm_api/src/: lib.rs
pkg/: manifest.json
pkg/api/: llm-api.wasm  stt-api.wasm  stt:uncentered.os.wit  tg-api.wasm
stt/: Cargo.toml
stt/src/: lib.rs  structs.rs
stt_api/: Cargo.toml
stt_api/src/: lib.rs
test/: tests.toml
test/command_center_test/: Cargo.toml  metadata.json
test/command_center_test/command_center_test/: Cargo.toml
test/command_center_test/command_center_test/src/: lib.rs
test/command_center_test/pkg/: manifest.json
tg/: Cargo.toml
tg/src/: helpers.rs  lib.rs  state.rs
tg_api/: Cargo.toml
tg_api/src/: lib.rs
tg_curator/: Cargo.toml
tg_curator/src/: helpers.rs  lib.rs  structs.rs
tg_yt_curation/: Cargo.toml
tg_yt_curation/src/: helpers.rs  lib.rs  lm.rs  lm_instruction.md  lm_instructions.md  structs.rs
