[package]
name = "tg_yt_curation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bincode = "1.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.9.0" }
process_macros = { git = "https://github.com/kinode-dao/process_macros", rev = "626e501" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
rand = "0.8.5"
regex = "1.11.0"
sha2 = "0.10.6"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
